# pyeclaw

./: .gitignore  Makefile  README.md  entitlements.plist  pyeclaw.spec  pyproject.toml
.github/workflows/: build.yml  release.yml
docs/: configuration.md  deploy-linux.md  deploy-macos.md  deploy-windows.md  getting-started.md  openclaw-setup.md
extras/images/: icon.icns
pyeclaw/: __main__.py  app.py  config.py
pyeclaw/gui/: assets.py  confirm_dialog.py  gateway_log.py  loading_overlay.py  main_window.py  settings_panel.py  sidebar.py  splash_screen.py  terminal.py  toast.py  version_modal.py
pyeclaw/resources/: icon.icns
pyeclaw/service/: config_manager.py  http.py  openclaw_runner.py  version_manager.py
scripts/: set_version.py
