[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyeclaw"
version = "1.0.0"
description = "Desktop manager for OpenClaw versions and gateway"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2024.0",
    "pyte>=0.8",
    "PySide6>=6.7",
    "pyinstaller>=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
]

[project.scripts]
pyeclaw = "pyeclaw.app:main"

[tool.setuptools.packages.find]
include = ["pyeclaw*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
